tests/rosetta/out/Fortran/call-a-function-11.error
gfortran: exit status 1
/tmp/call-a-function-11.f90:22:5:

   22 |     ref(((0)+1)) = 0
      |     1
Error: Unclassifiable statement at (1)
/tmp/call-a-function-11.f90:32:17:

   32 |     call zeroptr(box)
      |                 1
Error: Rank mismatch in argument ‘ref’ at (1) (scalar and rank-1)
